# mlops

./: .gitmodules  README.md
lab01/hw/app/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
lab01/hw/app/src/app/: __init__.py  inference.py
lab01/hw/app/tests/: test_app.py  test_inference.py
lab01/lab/: .pre-commit-config.yaml  .sops.yaml  Dockerfile  public_key.asc  pyproject.toml  secrets.yaml
lab01/lab/config/: .env.dev  .env.prod  .env.test
lab01/lab/models/: iris.pkl
lab01/lab/src/lab/: __init__.py  app.py  inference.py  settings.py  training.py
lab01/lab/tests/: test_app.py  test_settings.py
lab02/: .gitignore  .python-version:Zone.Identifier  notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb  notebook_hw.ipynb  pyproject.toml
lab02/data/: services_table.sql
lab03/: notebook_hw.ipynb  notebook_polars.ipynb
lab04/: HOMEWORK.md  LAB_INSTRUCTION.md  pyproject.toml
lab04/hw/: notebook.ipynb
lab04/lab/: notebook.ipynb
lab04/lab/vectorscale_db/: docker-compose.yml
lab04/lab/vectorscale_db/initdb/: create_similar_search_service_db.sql
lab05/: LAB_INSTRUCTION_2_MLFLOW.ipynb
lab06/: .gitignore  HOMEWORK.ipynb  LAB_INSTRUCTION.ipynb  cleanlab_utils.py  pyproject.toml
lab07/: LAB.ipynb  pyproject.toml
lab07/lab/: LAB.ipynb  pyproject.toml
lab07/onnx_app/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
lab07/torch_app/: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
lab09/: LAB_SOLUTION.md
lab09/app/: Dockerfile  docker-compose.yaml  pyproject.toml
lab09/app/artifacts/: .gitignore
lab09/app/scripts/: download_from_s3.py
lab09/app/src/app/: inference.py  main.py
lab10/ex1/: github.tf  variables.tf
lab10/ex1-aliases/: providers.tf  s3.tf
lab10/ex1-s3/: README.md  main.tf  providers.tf
lab10/ex2/: main.tf  outputs.tf  s3.tf  variables.tf
lab10/ex3/: s3.tf  variables.tf
lab10/ex3/modules/s3_bucket/: variables.tf
lab12/: .gitignore
lab12/dags/: 01_class_pipeline.py  02_taskflow_pipeline.py
lab12/hw/: Dockerfile  README.md  compose.yaml  pyproject.toml
lab12/hw/dags/: 01_download_and_preprocess.py  02_train_models.py
lab12/hw/init-db/: init.sql
lab12/hw/localstack-init/ready.d/: 01-create-buckets.sh
lab12/lab/: .gitignore  compose.yaml  pyproject.toml
lab12/lab/dags/: 02_taskflow_pipeline.py  03_scheduling.py  04_backfilling.py  05_scheduling_with_venvs.py  06_s3_integration.py  07_connections_and_variables.py
lab12/lab/init-db/: init.sql
lab12/lab/localstack-init/ready.d/: 01-create-buckets.sh
lab13/hw/: README.md  pyproject.toml
lab13/hw/src/app/: app.py  settings.py
lab13/hw/src/mcp/: settings.py  weather_server.py
lab13/lab/: 01_dynamic_quantization.py  02_manual_tool_calling.py  03_mcp_client.py  03_mcp_date_time_server.py  03_mcp_weather_forecast.py  04_mcp_client.py  04_mcp_lineplot.py  05_guardrails.py  README.md  pyproject.toml
