[project]
name = "lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bartosz Hanc", email = "bartosz.hanc02@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
]

[project.scripts]
lab = "lab:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
