[project]
name = "MLOps_course_AGH_lab_07"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "accelerate>=1.11.0",
    "numpy",
    "onnx",
    "onnxruntime",
    "setuptools>=80.9.0",
    "torch",
    "transformers",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.workspace]
members = [
    "onnx_app",
]
