[project]
name = "MLOps_course_AGH_lab_12"
version = "1.0.0"
description = ""

requires-python = "==3.11.*"

dependencies = [
    "apache-airflow[celery,postgres,standard,uv,cloudpickle]==3.1.5",
    "apache-airflow-providers-amazon",
    "polars",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "ruff"
]

airflow_common = [
    "apache-airflow[celery,postgres,standard,uv,cloudpickle,s3fs]==3.1.5",
    "apache-airflow-providers-amazon",
    "polars",
    "scikit-learn",
]
